--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
 <!-- Na cabeça do projeto temos informações necessárias como o titúlo, link da fonte e do site dos icones
 e de onde deve ser tirado o estilo (style.css)-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,38 +12,51 @@ e de onde deve ser tirado o estilo (style.css)-->
     <link href="https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap" rel="stylesheet">
 </head>
 
-<body >
-<!-- No corpo do projeto começamos com o Menu que tem os links internos (utilizando o a href)
-Em todo o código vemos a função id, que indica aonde o link deve apontar. Em alguns casos, precisei
-colocar em lugares diferentes para que quando a função acontecesse enviasse de forma agradável-->
+<body>
+    <!-- No corpo do projeto começamos com o Menu que tem os links internos (utilizando o a href). Em todo o código vemos a função id, que indica aonde o link deve apontar. 
+    Em alguns casos, precisei colocar em lugares diferentes para que quando a função acontecesse enviasse de forma agradável-->
     <div class="menu">
-        <a href="#perfil"><h3 style="color: rgb(187, 209, 243)" >Sobre Mim</h3></a>
-        <a href="#experiencia"><h3 style="color: rgb(187, 209, 243)">Expêriencia</h3></a>
-        <a href="#formacao"><h3 style="color: rgb(187, 209, 243)">Formação Acadêmica</h3></a>
-        <a href="#habilidades"><h3 style="color: rgb(187, 209, 243)">Hardskills</h3></a>
-        <a href="#contatos"><h3 style="color: rgb(187, 209, 243)">Contatos</h3></a>
+        <a href="#perfil">
+            <h3 style="color: rgb(187, 209, 243)">Sobre Mim</h3>
+        </a>
+        <a href="#experiencia">
+            <h3 style="color: rgb(187, 209, 243)">Expêriencia</h3>
+        </a>
+        <a href="#formacao">
+            <h3 style="color: rgb(187, 209, 243)">Formação Acadêmica</h3>
+        </a>
+        <a href="#habilidades">
+            <h3 style="color: rgb(187, 209, 243)">Hardskills</h3>
+        </a>
+        <a href="#contatos">
+            <h3 style="color: rgb(187, 209, 243)">Contatos</h3>
+        </a>
     </div>
 
-<br id="perfil"><br><br><br><br><br>
+    <br id="perfil"><br><br><br><br><br>
 
-<!-- Em perfil temos algumas informações pessoais, decidi não colocar meu endereço real no momento
-Aqui já somos apresentados aos primeiros links externos que abrem uma nova guia (usando o comando target) Possui meu nome completo e RU como primeira informação-->
-    <div class="perfil" >
+    <!-- Em perfil temos algumas informações pessoais, decidi não colocar meu endereço real no momento. 
+    Aqui já somos apresentados aos primeiros links externos que abrem uma nova guia (usando o comando target) Possui meu nome completo e RU como primeira informação-->
+    <div class="perfil">
         <h1>Jhonatan Gabriel Teixeira - 3987279</h1>
-        <img src="perfil.png"Este é Jhonatan Gabriel Teixeira - 3987279 width="290" height="290">
+        <img src="perfil.png" Este é Jhonatan Gabriel Teixeira - 3987279 width="290" height="290">
         <h3>18 anos, Masculino</h3>
         <h3>Rua dos Programadores, 33.301.333, Programalândia - Paraná</h3>
         <h3>(41) 9 9111 - 7099</h3>
-        <h3>e-mail: <a href="mailto:jhonatanteixeira1116@gmail.com" target="_blank" title="Envie-me um email" style="color: rgb(31, 100, 202);">jhonatanteixeira1116@gmail.com</a></h3>
-        <h3>Linkedln: <a href="https://www.linkedin.com/in/jhonatan-gabriel-teixeira-68b118254/" target="_blank" title="Link para o perifl do Linkedln" style="color: rgb(31, 100, 202);">@jhonatan-gabriel-teixeira </a></h3>
+        <h3>e-mail: <a href="mailto:jhonatanteixeira1116@gmail.com" target="_blank" title="Envie-me um email"
+                style="color: rgb(31, 100, 202);">jhonatanteixeira1116@gmail.com</a></h3>
+        <h3>Linkedln: <a href="https://www.linkedin.com/in/jhonatan-gabriel-teixeira-68b118254/" target="_blank"
+                title="Link para o perifl do Linkedln" style="color: rgb(31, 100, 202);">@jhonatan-gabriel-teixeira </a>
+        </h3>
         <h3>Objetivos</h3>
-        <h4 style="width: 70%; text-align: center; margin: auto;"   id="experiencia">Buscando colocar em prática no ambiente profissional minhas habilidades comportamentais e técnicas, 
+        <h4 style="width: 70%; text-align: center; margin: auto;" id="experiencia">Buscando colocar em prática no
+            ambiente profissional minhas habilidades comportamentais e técnicas,
             sempre prezando o bom convívio e a entrega excelente.</h4>
-            <br>
-    </div > 
-<br><br><br>
+        <br>
+    </div>
+    <br><br><br>
 
-<!--Nessa parte, tem o código da parte de Experiência, onde usamos as classes criadas em css "informacoes", "div-pai-experiencia" e "divs. Possui o icone flask"-->
+    <!--Nessa parte, tem o código da parte de Experiência, onde usamos as classes criadas em css "informacoes", "div-pai-experiencia" e "divs. Possui o icone flask"-->
     <div class="informacoes">
         <i class="fas fa-flask"></i>
     </div>
@@ -53,12 +67,12 @@ Aqui já somos apresentados aos primeiros links externos que abrem uma nova guia
                 Instrutor de Curso Recode - Março 2022 até Dezembro 2022
             </h3>
             <p>Durante 10 meses trabalhei como instrutor de cursos de tecnologia digital pela
-            Recode, onde estava sempre a frente do projeto. Nesse ambiente, pude aprimorar
-            minhas habilidades técnicas na tecnologia e mais ainda minhas soft skills, podendo
-            resaltar a organização, foco, disciplina, trabalho em equipe, comunicação. 
-            Por sempre estar presente pra auxiliar os alunos, posso destacar o bom projeto que fizemos:
-            mais de 150 pessoas atendidas por este trabalho. Além disso, pude ter a oportunidade de 
-            dar palestrar pra mais de 80 adolescentes de uma escola local. </p>
+                Recode, onde estava sempre a frente do projeto. Nesse ambiente, pude aprimorar
+                minhas habilidades técnicas na tecnologia e mais ainda minhas soft skills, podendo
+                resaltar a organização, foco, disciplina, trabalho em equipe, comunicação.
+                Por sempre estar presente pra auxiliar os alunos, posso destacar o bom projeto que fizemos:
+                mais de 150 pessoas atendidas por este trabalho. Além disso, pude ter a oportunidade de
+                dar palestrar pra mais de 80 adolescentes de uma escola local. </p>
         </div>
 
         <div class="divs">
@@ -66,44 +80,46 @@ Aqui já somos apresentados aos primeiros links externos que abrem uma nova guia
                 Estágio na Telefônica/Vivo - Fevereiro 2023 até Fevereiro 2024
             </h3>
             <p>Atuando na área de Engenharia e Serviços ao cliente na Vivo, pude ter ainda mais expêrincias
-            no ambiente profissional. Destaco as habilidades de pensamento analítico que adquiri ao longo de 8 meses de estágio.
-            Hardskills como Jira, Git, Caso de Testes, ambientes e cenários, redes, wireshark, IoT, Casa Inteligente no geral, 
-            foram algumas das habilidades que conquistei trabalhando com meus colegas. </p>
+                no ambiente profissional. Destaco as habilidades de pensamento analítico que adquiri ao longo de 8 meses
+                de estágio.
+                Hardskills como Jira, Git, Caso de Testes, ambientes e cenários, redes, wireshark, IoT, Casa Inteligente
+                no geral,
+                foram algumas das habilidades que conquistei trabalhando com meus colegas. </p>
 
         </div>
     </div>
 
-<br> <br>
+    <br> <br>
 
-<!-- Formação Acadêmica segue o mesmo que a Experiência, mudando apenas que não tem dois divis filho dentro, portanto não precisando da lógica especial da Experiencia-->
+    <!-- Formação Acadêmica segue o mesmo que a Experiência, mudando apenas que não tem dois divis filho dentro, portanto não precisando da lógica especial da Experiencia-->
     <div class="informacoes">
-        <i class="fas fa-graduation-cap" id="formacao" ></i>
+        <i class="fas fa-graduation-cap" id="formacao"></i>
     </div>
 
     <h2 class="informacoes">Formação Acadêmica</h2>
-    <div class="informacoes" >
+    <div class="informacoes">
         <h3>Graduando - Análise e Desenvolvimento de Sistemas</h3>
         <ul>
             <li>
-            Centro Universiário Internacional Uninter - Fevereiro 2022 até Julho 2024 (Previsão)
+                Centro Universiário Internacional Uninter - Fevereiro 2022 até Julho 2024 (Previsão)
             </li>
-         </ul>
+        </ul>
     </div>
 
-<br><br>
+    <br><br>
 
-<!-- Habilidades é muito parecido com Formação Acadêmica, mudando apenas o seu conteúdo-->
+    <!-- Habilidades é muito parecido com Formação Acadêmica, mudando apenas o seu conteúdo-->
     <div class="informacoes">
         <i class="fas fa-cogs"></i>
     </div>
     <h2 class="informacoes" id="habilidades">Habilidades</h2>
     <div class="informacoes">
-        <ul >
-            <li >
-            Inglês Básico
+        <ul>
+            <li>
+                Inglês Básico
             </li>
             <li>
-            Afinade em Pacote Office
+                Afinade em Pacote Office
             </li>
             <li>
                 Conhecimento em Hardware - Montagem e Manutenção de Computadores
@@ -120,34 +136,36 @@ Aqui já somos apresentados aos primeiros links externos que abrem uma nova guia
             <li>
                 Reconhecimento e Solução de Problemas
             </li>
-         </ul>
-    </div> 
+        </ul>
+    </div>
 
-<br><br>    
+    <br><br>
 
-<!-- Chegando na parte de Contato, temos os links para redes externas. Usando a animação dos divis de css. Abrem uma nova guia quando clicados-->
+    <!-- Chegando na parte de Contato, temos os links para redes externas. Usando a animação dos divis de css. Abrem uma nova guia quando clicados-->
     <div class="redes" id="contatos">
         <div class="div-linkedln">
-            <a href="https://www.linkedin.com/in/jhonatan-gabriel-teixeira-68b118254/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jhonatan-gabriel-teixeira-68b118254/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
         </div>
 
-        <div class="div-github"> 
-            <a href="https://github.com/GoodZiran" target="_blank"><i class="fab fa-github"></i></a>  
-        </div> 
-        
+        <div class="div-github">
+            <a href="https://github.com/GoodZiran" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+
         <div class="div-instagram">
             <a href="https://www.instagram.com/seaweedhead3000/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
 
         <div class="div-whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=5541991117099" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=5541991117099" target="_blank"><i
+                    class="fab fa-whatsapp-square"></i></a>
         </div>
 
         <div class="div-email">
             <a href="mailto:jhonatanteixeira1116@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
     </div>
-<br>
-
+    <br>
 </body>
+
 </html>
